// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept all props 1`] = `
<Chip
  code="Test-Chip-Code-1"
  hex="#B4D455"
  name="Badass Green"
>
  <div
    className="Chip"
  >
    <Card>
      <div
        className="Card"
      >
        <div
          className="Chip-header"
          style={
            Object {
              "backgroundColor": "#B4D455",
            }
          }
        />
        <div
          className="Chip-body"
        >
          <p
            className="Chip-tm"
          >
            Pantone®
          </p>
          <p
            className="Chip-code"
          >
            Test-Chip-Code-1
          </p>
          <p
            className="Chip-name"
          >
            Badass Green
          </p>
        </div>
      </div>
    </Card>
  </div>
</Chip>
`;

exports[`should render chip even with just hex code passed 1`] = `
<Chip
  hex="#B4D455"
>
  <div
    className="Chip"
  >
    <Card>
      <div
        className="Card"
      >
        <div
          className="Chip-header"
          style={
            Object {
              "backgroundColor": "#B4D455",
            }
          }
        />
        <div
          className="Chip-body"
        >
          <p
            className="Chip-tm"
          >
            Pantone®
          </p>
          <p
            className="Chip-code"
          >
            Please specify code
          </p>
          <p
            className="Chip-name"
          >
            Please specify name
          </p>
        </div>
      </div>
    </Card>
  </div>
</Chip>
`;
